# Repository-1

./: .gitignore  README.md  pyproject.toml
hal/: __init__.py  browser.py  cache.py  cli.py  config.py  extract_dom.py  extract_vision.py  models.py  safety.py  sec_edgar.py  server.py
tests/: test_extraction_ladder.py  test_safety.py  test_sec_edgar.py
