[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hal-agent-host"
version = "0.1.0"
description = "HAL local-first AI agent host for web browsing and extraction"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "HAL"}]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "playwright>=1.46.0",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "readability-lxml>=0.8.1",
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
hal = "hal.cli:main"

[tool.setuptools]
packages = ["hal"]

