[project]
name = "hal-server"
version = "0.1.0"
description = "HAL FastAPI server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "markdown>=3.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
